# socha2019

./: Cargo.toml  README.md
clop_script/: Cargo.toml
clop_script/clop/: start.clop
clop_script/src/: main.rs
game_sdk/: Cargo.toml
game_sdk/src/: bitboard.rs  board.rs  gamerules.rs  gamestate.rs  lib.rs  logging.rs
logger/: Cargo.toml
logger/src/: lib.rs  logger.rs  states.rs
logic_player/: Cargo.toml
logic_player/src/: distance_player.rs  lib.rs  util.rs
logic_player/src/clop_player/: algorithm.rs  enemy_pool.rs  evaluation.rs  mcts.rs  mod.rs  piranhas.rs  player.rs  rave_player.rs
logic_player/src/clop_player/new_minimax/: algorithm.rs  evaluation.rs  mod.rs  player.rs  transposition.rs
logic_player/src/hybrid/: mod.rs  player.rs
logic_player/src/legacy_minimax/: algorithm.rs  evaluation.rs  mod.rs  player.rs  transposition.rs
logic_player/src/legacy_rave/: mcts.rs  mod.rs  piranhas.rs  player.rs
logic_player/src/mcts_rave/: mcts.rs  mod.rs  piranhas.rs  player.rs
logic_player/src/minimax/: algorithm.rs  evaluation.rs  mod.rs  player.rs  transposition.rs
logic_player/src/pleco_clone/: board.rs  consts.rs  mod.rs  move_list.rs  movepick.rs  player.rs  root_moves_list.rs  score.rs  search.rs  tt.rs
logic_player/src/pleco_clone/tables/: butterfly.rs  continuation.rs  counter_move.rs  mod.rs
perft/: Cargo.toml
perft/src/: main.rs
simulator/: Cargo.toml
simulator/src/: game_runner.rs  main.rs  tournament.rs  xml_utils.rs
xml_client/: Cargo.toml
xml_client/src/: arg_parser.rs  main.rs  xml_client.rs  xml_utils.rs
(+7 files in other folders)
